fix gallery dialog overflow

--- a/src/components/imagePreview/imagePreview.default.css
+++ b/src/components/imagePreview/imagePreview.default.css
@@ -1,1 +1,5 @@
-.imagePreview__dialog {}
+.imagePreview__dialog {
+    .dialog__body {
+        overflow: visible;
+    }
+}
